--- a/production-guestbook-ingress.yaml
+++ b/production-guestbook-ingress.yaml
@@ -1,20 +1,15 @@
-apiVersion: v1
-kind: Service
+apiVersion: extensions/v1beta1 # for versions before 1.14 use extensions/v1beta1
+kind: Ingress
 metadata:
-  name: frontend
-  labels:
-    app: guestbook
-    tier: frontend
+  name: prod-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
-  # comment or delete the following line if you want to use a LoadBalancer
-  #type: NodePort
-  # if your cluster supports it, uncomment the following to automatically create
-  # an external load-balanced IP for the frontend service.
-  type: LoadBalancer
-  ports:
-  - name: prodexpose
-    port: 80
-    #nodePort: 30036
-  selector:
-    app: guestbook
-    tier: frontend
+ rules:
+ - host: guestbook.mstakx.io
+   http:
+     paths:
+     - path: /
+       backend:
+         serviceName: frontend
+         servicePort: 80
